# regspec-machine

./: .gitignore  README.md  __init__.py  bootstrap.py  contract.yaml  estimators.py  fdr.py  feature_registry.py  module_input.py  pyproject.toml  reporting.py  search_engine.py  splitter.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BASELINE_LOCK_2026-02-24.md  BEGINNER_GUIDE_KO.md  CONTRACTS.md  DESKTOP_WRAPPER_POC.md  LOCAL_CONSOLE_RUNBOOK.md  README.md
docs/investigations/: README.md
docs/investigations/legacy/pre_lifecycle/: PURGED_20260226.txt
docs/investigations/registry/: Rulebook_v0.md  active_stream_lock.yaml  agent_bootstrap.yaml  archive_index.csv  decision_index.csv  operating_model.md  project_flow_branching.md  runlog_recent.md  stream_registry.md
docs/investigations/streams/phase0_baseline/: note.md  ongoing.md
docs/investigations/streams/phase0_quality/: note.md  ongoing.md
docs/investigations/streams/phase2_contract/: note.md  ongoing.md
docs/specs/: ARCHITECTURE.md  BASELINE_LOCK_2026-02-24.md  BEGINNER_GUIDE_KO.md  CONSTITUTION.md  CONTRACTS.md  README.md  TODO.md
regspec_machine/: __init__.py  api.py  bootstrap.py  bundle.py  contracts.py  dataset_profile.py  desktop.py  desktop_entry.py  engine.py  estimators.py  fdr.py  feature_registry.py  launcher.py  module_input.py  orchestrator.py  reporting.py  search_engine.py  shortlist.py  ui_page.py
scripts/: check_module_03_contract_ci.py  create_module_03_dataset_dump.sh  run_module_03.sh  smoke_module_03_migration_paths.sh
scripts/modeling/: run_phase_b_bikard_machine_scientist_scan.py  run_phase_b_regspec_preset.py
scripts/reporting/: build_phase_b_regspec_dashboard.py
scripts/ui/: run_ux_journey_smoke.py
tests/: test_api.py  test_bootstrap_summary.py  test_bundle.py  test_contracts.py  test_desktop.py  test_engine.py  test_estimators_optimizer.py  test_expression_augmentation.py  test_feature_registry_suggested_as_control.py  test_launcher.py  test_module_input.py  test_orchestrator.py  test_package_lazy_exports.py  test_parity_l2_l3_l4.py  test_preset_and_preflight_helpers.py  test_root_init_wrapper.py  test_runner_governance_helpers.py  test_scan_contexts_and_shortlist.py  test_scan_fixed_regressors.py  test_splitter_holdout.py
(+3 files in other folders)
