[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regspec-machine"
version = "0.1.0"
description = "Governed regression specification search engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ModuleDev Team" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["regspec_machine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
